--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -19,6 +19,7 @@ catalog:
   "@rsbuild/core": ^1.3.20
   "@rsbuild/plugin-less": ^1.2.2
   "@rsbuild/plugin-react": ^1.2.0
+  "@rsbuild/plugin-source-build": ^1.0.2
   "@rslib/core": ^0.7.1
   "@rybbit/js": ^0.1.0
   "@storybook/addon-essentials": ^8.6.14
