--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@ant-design/cssinjs": "catalog:",
 		"@ant-design/icons": "catalog:",
+		"@ant-design/v5-patch-for-react-19": "^1.0.3",
 		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
