--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,12 +1,18 @@
 packages:
-  - "packages/*"
+  - packages/*
+
 onlyBuiltDependencies:
   - "@biomejs/biome"
+  - "@tailwindcss/oxide"
   - core-js
   - esbuild
+  - sharp
+  - unrs-resolver
+
 catalog:
   "@ant-design/cssinjs": ^1.23.0
   "@ant-design/icons": ^5.6.1
+  "@ant-design/nextjs-registry": ^1.0.2
   "@ant-design/x": ^1.2.0
   "@biomejs/biome": ^1.9.4
   "@changesets/cli": ^2.29.2
