feat(nextjs-app): antd 兼容 react19

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@ant-design/nextjs-registry": "catalog:",
+		"@ant-design/v5-patch-for-react-19": "^1.0.3",
 		"@dify-chat/components": "workspace:^",
 		"antd": "catalog:",
 		"next": "catalog:",
