--- a/packages/nextjs-app/tsconfig.json
+++ b/packages/nextjs-app/tsconfig.json
@@ -23,5 +23,22 @@
 		}
 	},
 	"include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-	"exclude": ["node_modules"]
+	"exclude": ["node_modules"],
+	"references": [
+		{
+			"path": "../api"
+		},
+		{
+			"path": "../components"
+		},
+		{
+			"path": "../core"
+		},
+		{
+			"path": "../helpers"
+		},
+		{
+			"path": "../theme"
+		}
+	]
 }
