feat(nextjs-app): 添加应用列表页面及核心模块依赖
- 在 package.json 中添加 @dify-chat/core 依赖
- 实现应用列表页面，包含应用卡片展示、路由跳转等功能
- 使用 antd 组件构建响应式布局，适配移动端
- 添加测试数据展示应用卡片的基本信息

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -13,6 +13,7 @@
 		"@ant-design/nextjs-registry": "catalog:",
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
 		"@dify-chat/components": "workspace:^",
+		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
 		"antd": "catalog:",
