feat(nextjs-app): 新增多应用管理功能及相关组件
- 添加应用列表页面及配置编辑功能
- 实现应用创建、编辑、删除等操作
- 新增应用设置表单组件
- 添加ahooks依赖支持
- 使用DifyChatProvider包装应用页面

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -16,6 +16,7 @@
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
+		"ahooks": "catalog:",
 		"antd": "catalog:",
 		"classnames": "catalog:",
 		"next": "catalog:",
