--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -12,6 +12,7 @@
 		"@ant-design/icons": "catalog:",
 		"@ant-design/nextjs-registry": "catalog:",
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
