feat(nextjs-app): 应用详情的基本布局移植

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -12,14 +12,17 @@
 		"@ant-design/icons": "catalog:",
 		"@ant-design/nextjs-registry": "catalog:",
 		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
+		"@fingerprintjs/fingerprintjs": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
 		"classnames": "catalog:",
+		"dayjs": "catalog:",
 		"next": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:"
