chore: 添加 Next.js 应用的构建脚本
在 package.json 中添加 build:next 脚本，用于构建 Next.js 应用

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"scripts": {
 		"build:pkgs": "pnpm --filter @dify-chat/* build",
 		"build": "pnpm build:pkgs && pnpm --filter dify-chat-app-react build",
+		"build:next": "pnpm build:pkgs && pnpm --filter dify-chat-app-nextjs build",
 		"dev": "pnpm --filter dify-chat-app-react dev",
 		"dev:next": "cd packages/nextjs-app && pnpm dev",
 		"format": "prettier --write .",
