--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -53,5 +53,8 @@
 	"peerDependencies": {
 		"react": ">=16.9.0",
 		"react-dom": ">=16.9.0"
+	},
+	"dependencies": {
+		"@dify-chat/helpers": "workspace:^"
 	}
 }
