chore(nextjs-app): 添加 @toolkit-fe/clipboard 和 jose 依赖
更新 package.json 和 pnpm-lock.yaml 文件，添加新的依赖包以支持剪贴板功能和 JWT 处理

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -19,10 +19,12 @@
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
 		"@fingerprintjs/fingerprintjs": "catalog:",
+		"@toolkit-fe/clipboard": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
 		"classnames": "catalog:",
 		"dayjs": "catalog:",
+		"jose": "^6.0.11",
 		"next": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:"
