chore(nextjs-app): jose 依赖版本使用 catalog 声明，更新 pnpm-lock.yaml

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -24,7 +24,7 @@
 		"antd": "catalog:",
 		"classnames": "catalog:",
 		"dayjs": "catalog:",
-		"jose": "^6.0.11",
+		"jose": "catalog:",
 		"next": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:"
