--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -64,6 +64,7 @@ catalog:
   globals: ^16.0.0
   hast: ^1.0.0
   husky: ^9.1.7
+  jose: ^6.0.11
   jsdom: ^26.1.0
   katex: ^0.16.22
   koa: ^2.16.1
