feat(nextjs-app): 添加 Prisma ORM 支持及初始化数据库配置
- 添加 Prisma 相关依赖和配置文件
- 初始化应用表结构并设置数据库连接
- 更新 .gitignore 忽略生成文件

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -19,6 +19,7 @@
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
 		"@fingerprintjs/fingerprintjs": "catalog:",
+		"@prisma/client": "catalog:",
 		"@toolkit-fe/clipboard": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
@@ -26,6 +27,7 @@
 		"dayjs": "catalog:",
 		"jose": "catalog:",
 		"next": "catalog:",
+		"prisma": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:"
 	},
