chore(theme): 优化类型定义和依赖管理
- 在 tsconfig.json 中添加 paths 配置，使编辑器类型定义能够指向源码
- 更新 package.json 中的依赖顺序（自动更新）
- 在 theme 包中添加 @dify-chat/helpers 作为依赖

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -39,19 +39,22 @@
 		"@rsbuild/plugin-react": "catalog:",
 		"@rslib/core": "catalog:",
 		"@types/react": "catalog:",
+		"antd": "catalog:",
 		"eslint": "catalog:",
 		"globals": "catalog:",
+		"lucide-react": "catalog:",
 		"prettier": "catalog:",
 		"react": "catalog:",
 		"typescript": "catalog:",
-		"typescript-eslint": "catalog:",
-		"antd": "catalog:",
-		"lucide-react": "catalog:"
+		"typescript-eslint": "catalog:"
 	},
 	"peerDependencies": {
-		"lucide-react": "catalog:",
 		"antd": ">=5.0.0",
+		"lucide-react": "catalog:",
 		"react": ">=16.9.0",
 		"react-dom": ">=16.9.0"
+	},
+	"dependencies": {
+		"@dify-chat/helpers": "workspace:^"
 	}
 }
