--- a/packages/components/tsconfig.json
+++ b/packages/components/tsconfig.json
@@ -11,7 +11,10 @@
 		"useDefineForClassFields": true,
 		"composite": true,
 		"rootDir": "src",
-		"outDir": "dist"
+		"outDir": "dist",
+		"paths": {
+			"@/*": ["./src/*"]
+		}
 	},
 	"include": ["src"],
 	"references": [
