--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -13,5 +13,10 @@
 		"rootDir": "src",
 		"outDir": "dist"
 	},
-	"include": ["src"]
+	"include": ["src"],
+	"references": [
+		{
+			"path": "../helpers"
+		}
+	]
 }
