--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,6 +1,9 @@
 packages:
   - packages/*
 
+overrides:
+  "mdast-util-gfm-autolink-literal": 2.0.0
+
 onlyBuiltDependencies:
   - "@biomejs/biome"
   - "@prisma/client"
