chore(nextjs-app): dev/build 钱运行 prisma generate，确保 Prisma Client 与数据库结构保持一致

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -3,8 +3,10 @@
 	"version": "0.3.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
-		"build": "next build",
+		"prisma:gen": "prisma generate",
+		"prisma:migrate": "prisma migrate dev",
+		"dev": "pnpm prisma:gen && next dev --turbopack",
+		"build": "pnpm prisma:gen && next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
