chore: 更新部分测试依赖版本为 catalog 格式
- 将多个 package.json 中的依赖版本从具体版本号改为 catalog 格式
- 在 pnpm-workspace.yaml 中添加缺失的 catalog 依赖

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"husky": "catalog:",
 		"lint-staged": "catalog:",
 		"prettier": "catalog:",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-tailwindcss": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	},
