--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"@ant-design/icons": "catalog:",
 		"@ant-design/nextjs-registry": "catalog:",
-		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@ant-design/v5-patch-for-react-19": "catalog:",
 		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
