--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -13,7 +13,7 @@
 	"dependencies": {
 		"@ant-design/cssinjs": "catalog:",
 		"@ant-design/icons": "catalog:",
-		"@ant-design/v5-patch-for-react-19": "^1.0.3",
+		"@ant-design/v5-patch-for-react-19": "catalog:",
 		"@ant-design/x": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
@@ -55,7 +55,7 @@
 		"globals": "catalog:",
 		"pako": "catalog:",
 		"prettier": "catalog:",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-tailwindcss": "catalog:",
 		"tailwindcss": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
