--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -52,6 +52,7 @@ catalog:
   "@types/lodash-es": ^4.17.12
   "@types/node": ^22.14.1
   "@types/pako": ^2.0.3
+  "@types/pg": ^8.15.4
   "@types/react": ^19.1.5
   "@types/react-dom": ^19.1.5
   "@types/react-syntax-highlighter": ^15.5.13
@@ -62,6 +63,8 @@ catalog:
   classnames: ^2.5.1
   dayjs: ^1.11.13
   dompurify: ^3.2.5
+  drizzle-kit: "^0.31.2"
+  drizzle-orm: "^0.44.2"
   echarts-for-react: ^3.0.2
   eslint: ^9.26.0
   eslint-config-next: ^15.3.2
@@ -83,6 +86,7 @@ catalog:
   mermaid: ^11.6.0
   next: ^15.3.2
   pako: ^2.1.0
+  pg: ^8.16.2
   prettier: ^3.5.3
   prettier-plugin-tailwindcss: ^0.6.11
   prisma: ^6.9.0
@@ -104,6 +108,7 @@ catalog:
   storybook-react-rsbuild: ^1.0.1
   tailwind-merge: ^3.3.0
   tailwindcss: ^3
+  tsx: ^4.20.3
   typescript: ^5.8.3
   typescript-eslint: ^8.30.1
   vitest: ^3.2.3
