chore(nextjs-app): 移除所有 prisma/drizzle ORM 相关的依赖和代码

--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -3,11 +3,8 @@
 	"version": "0.3.0",
 	"private": true,
 	"scripts": {
-		"prisma:gen": "prisma generate",
-		"prisma:migrate": "prisma migrate dev",
-		"db:gen": "drizzle-kit generate",
-		"dev": "pnpm db:gen && next dev --turbopack",
-		"build": "pnpm db:gen && next build",
+		"dev": "next dev --turbopack",
+		"build": "next build",
 		"start": "next start",
 		"lint": "next lint"
 	},
@@ -22,17 +19,13 @@
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
 		"@fingerprintjs/fingerprintjs": "catalog:",
-		"@prisma/client": "catalog:",
 		"@toolkit-fe/clipboard": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
 		"classnames": "catalog:",
 		"dayjs": "catalog:",
-		"drizzle-orm": "catalog:",
 		"jose": "catalog:",
 		"next": "catalog:",
-		"pg": "catalog:",
-		"prisma": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:"
 	},
@@ -40,10 +33,8 @@
 		"@eslint/eslintrc": "catalog:",
 		"@tailwindcss/postcss": "^4",
 		"@types/node": "catalog:",
-		"@types/pg": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
-		"drizzle-kit": "catalog:",
 		"eslint": "catalog:",
 		"eslint-config-next": "catalog:",
 		"tailwindcss": "^4",
