--- a/packages/nextjs-app/package.json
+++ b/packages/nextjs-app/package.json
@@ -3,9 +3,9 @@
 	"version": "0.3.0",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "next dev --turbopack -p 5300",
 		"build": "next build",
-		"start": "next start",
+		"start": "next start -p 5300",
 		"lint": "next lint"
 	},
 	"dependencies": {
