--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"private": true,
 	"version": "0.2.0",
 	"scripts": {
-		"build:pkgs": "pnpm --filter @dify-chat/* build",
+		"build:pkgs": "pnpm --filter @dify-chat/* recursive run build",
 		"build": "pnpm build:pkgs && pnpm --filter dify-chat-app-react build",
 		"build:next": "pnpm build:pkgs && pnpm --filter dify-chat-app-nextjs build",
 		"dev": "pnpm --filter dify-chat-app-react dev",
