--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
 	"private": true,
 	"version": "0.2.0",
 	"scripts": {
-		"build:pkgs": "pnpm --filter @dify-chat/* recursive run build",
 		"build": "pnpm build:pkgs && pnpm --filter dify-chat-app-react build",
+		"build:pkgs": "pnpm --filter @dify-chat/* recursive run build",
 		"build:next": "pnpm build:pkgs && pnpm --filter dify-chat-app-nextjs build",
+		"build:docs": "pnpm --filter dify-chat-docs build",
 		"dev": "pnpm --filter dify-chat-app-react dev",
-		"dev:next": "cd packages/nextjs-app && pnpm dev",
+		"dev:next": "pnpm --filter dify-chat-app-nextjs dev",
+		"dev:docs": "pnpm --filter dify-chat-docs dev",
 		"format": "prettier --write .",
 		"lint": "eslint .",
 		"preview": "pnpm --filter dify-chat-app-react preview",
