--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -1,6 +1,6 @@
 {
-	"name": "docs",
-	"version": "1.0.0",
+	"name": "dify-chat-docs",
+	"version": "0.3.0",
 	"private": true,
 	"scripts": {
 		"build": "rspress build",
