--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"format": "prettier --write .",
 		"lint": "eslint .",
 		"preview": "pnpm --filter dify-chat-app-react preview",
+		"preview:next": "pnpm --filter dify-chat-app-nextjs start",
 		"prepare": "husky"
 	},
 	"devDependencies": {
