feat(components): AppIcon 支持将 emoji 文本转换为 unicode 渲染, Close #301
    - 引入 emoji-dictionary 以支撑上述功能

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -93,6 +93,7 @@
 		"classnames": "catalog:",
 		"dompurify": "catalog:",
 		"echarts-for-react": "catalog:",
+		"emoji-dictionary": "catalog:",
 		"hast": "catalog:",
 		"katex": "catalog:",
 		"lodash-es": "catalog:",
