--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -59,6 +59,7 @@ catalog:
   dayjs: ^1.11.13
   dompurify: ^3.2.5
   echarts-for-react: ^3.0.2
+  emoji-dictionary: ^1.0.12
   eslint: ^9.26.0
   eslint-config-next: ^15.3.2
   eslint-plugin-react: ^7.37.5
