--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -28,6 +28,7 @@
 		"antd": "catalog:",
 		"antd-style": "catalog:",
 		"classnames": "catalog:",
+		"lodash-es": "catalog:",
 		"lucide-react": "catalog:",
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
@@ -44,6 +45,7 @@
 		"@rsbuild/plugin-react": "catalog:",
 		"@rsbuild/plugin-source-build": "catalog:",
 		"@trivago/prettier-plugin-sort-imports": "catalog:",
+		"@types/lodash-es": "catalog:",
 		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
