--- a/packages/nextjs-admin/package.json
+++ b/packages/nextjs-admin/package.json
@@ -9,19 +9,40 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@ant-design/icons": "catalog:",
+		"@ant-design/nextjs-registry": "catalog:",
+		"@ant-design/v5-patch-for-react-19": "catalog:",
+		"@dify-chat/api": "workspace:^",
+		"@dify-chat/components": "workspace:^",
+		"@dify-chat/core": "workspace:^",
+		"@dify-chat/helpers": "workspace:^",
+		"@dify-chat/theme": "workspace:^",
+		"@radix-ui/react-dialog": "^1.1.14",
+		"@radix-ui/react-slot": "^1.2.3",
+		"ahooks": "catalog:",
+		"antd": "catalog:",
+		"class-variance-authority": "^0.7.1",
+		"classnames": "catalog:",
+		"clsx": "^2.1.1",
+		"dayjs": "catalog:",
+		"lucide-react": "catalog:",
+		"next": "catalog:",
+		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
-		"next": "catalog:"
+		"tailwind-merge": "catalog:",
+		"vaul": "^1.1.2"
 	},
 	"devDependencies": {
-		"typescript": "catalog:",
+		"@eslint/eslintrc": "catalog:",
+		"@tailwindcss/postcss": "^4",
 		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
-		"@tailwindcss/postcss": "^4",
-		"tailwindcss": "^4",
 		"eslint": "catalog:",
 		"eslint-config-next": "catalog:",
-		"@eslint/eslintrc": "catalog:"
+		"tailwindcss": "^4",
+		"tw-animate-css": "^1.3.5",
+		"typescript": "catalog:"
 	}
 }
