feat(nextjs-admin): 实现数据库持久化存储并重构应用管理功能
- 重构应用管理模块，从文件存储迁移到 Prisma + SQLite 数据库方案
- 添加数据库初始化脚本和 Docker 部署支持
- 实现应用管理 CRUD 接口和类型安全转换
- 添加健康检查端点并完善系统配置页面
- 更新文档说明数据库配置和部署指南

--- a/packages/nextjs-admin/.gitignore
+++ b/packages/nextjs-admin/.gitignore
@@ -33,6 +33,16 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# database
+/prisma/dev.db
+/prisma/dev.db-journal
+/data/
+*.db
+*.db-journal
+
+# migration files (uncomment if you want to ignore them)
+# /prisma/migrations/
+
 # vercel
 .vercel
 
