--- a/packages/nextjs-admin/package.json
+++ b/packages/nextjs-admin/package.json
@@ -6,7 +6,14 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"db:generate": "prisma generate",
+		"db:push": "prisma db push",
+		"db:migrate": "prisma migrate dev",
+		"db:studio": "prisma studio",
+		"db:seed": "tsx prisma/seed.ts",
+		"db:init": "tsx scripts/init-db.ts",
+		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@ant-design/icons": "catalog:",
@@ -17,6 +24,7 @@
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
+		"@prisma/client": "^6.1.0",
 		"@radix-ui/react-dialog": "^1.1.14",
 		"@radix-ui/react-slot": "^1.2.3",
 		"ahooks": "catalog:",
@@ -41,7 +49,9 @@
 		"@types/react-dom": "catalog:",
 		"eslint": "catalog:",
 		"eslint-config-next": "catalog:",
+		"prisma": "^6.1.0",
 		"tailwindcss": "^4",
+		"tsx": "^4.19.2",
 		"tw-animate-css": "^1.3.5",
 		"typescript": "catalog:"
 	}
