feat(react-app): 添加zustand状态管理并支持全局参数存储
- 添加zustand作为状态管理库，并实现全局参数存储功能
- 在布局组件中初始化时处理URL参数，支持通过isKeepAll标志保留所有参数到全局状态

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -33,7 +33,8 @@
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
-		"semver": "catalog:"
+		"semver": "catalog:",
+		"zustand": "catalog:"
 	},
 	"devDependencies": {
 		"@changesets/cli": "catalog:",
