refactor(react-app): 将原本引用自 @dify-chat/components 子包的组件全部复制一份到 components 目录中, 便于后续状态管理的统一

--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -20,7 +20,9 @@
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
+		"@heroicons/react": "catalog:",
 		"@rybbit/js": "catalog:",
+		"@svgdotjs/svg.js": "catalog:",
 		"@toolkit-fe/clipboard": "catalog:",
 		"@toolkit-fe/where-am-i": "catalog:",
 		"@types/pako": "catalog:",
@@ -28,12 +30,27 @@
 		"antd": "catalog:",
 		"antd-style": "catalog:",
 		"classnames": "catalog:",
+		"dompurify": "catalog:",
+		"echarts-for-react": "catalog:",
+		"emoji-dictionary": "catalog:",
+		"hast": "catalog:",
+		"katex": "catalog:",
 		"lodash-es": "catalog:",
 		"lucide-react": "catalog:",
+		"mermaid": "catalog:",
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
+		"react-markdown": "catalog:",
+		"react-photo-view": "catalog:",
+		"react-syntax-highlighter": "catalog:",
+		"rehype-katex": "catalog:",
+		"rehype-raw": "catalog:",
+		"remark-breaks": "catalog:",
+		"remark-gfm": "catalog:",
+		"remark-math": "catalog:",
 		"semver": "catalog:",
+		"tailwind-merge": "catalog:",
 		"zustand": "catalog:"
 	},
 	"devDependencies": {
@@ -46,10 +63,12 @@
 		"@rsbuild/plugin-react": "catalog:",
 		"@rsbuild/plugin-source-build": "catalog:",
 		"@trivago/prettier-plugin-sort-imports": "catalog:",
+		"@types/hast": "catalog:",
 		"@types/lodash-es": "catalog:",
 		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
+		"@types/react-syntax-highlighter": "catalog:",
 		"@types/semver": "catalog:",
 		"dayjs": "catalog:",
 		"eslint": "catalog:",
