chore(deps): bump @changesets/cli from 2.29.2 to 2.29.5

--- a/package.json
+++ b/package.json
@@ -3,21 +3,23 @@
 	"private": true,
 	"version": "0.4.0",
 	"scripts": {
-		"build": "pnpm build:pkgs && pnpm --filter dify-chat-app-react build",
-		"build:pkgs": "pnpm --filter @dify-chat/* recursive run build",
-		"build:next": "pnpm build:pkgs && pnpm --filter dify-chat-app-nextjs build",
-		"build:platform": "pnpm build:pkgs && pnpm --filter dify-chat-platform build",
-		"build:docs": "pnpm --filter dify-chat-docs build",
-		"dev": "pnpm --filter dify-chat-app-react dev",
-		"dev:next": "pnpm --filter dify-chat-app-nextjs dev",
-		"dev:platform": "pnpm --filter dify-chat-platform dev",
-		"dev:docs": "pnpm --filter dify-chat-docs dev",
-		"format": "prettier --write .",
-		"lint": "eslint .",
-		"preview": "pnpm --filter dify-chat-app-react preview",
-		"preview:next": "pnpm --filter dify-chat-app-nextjs start",
-		"preview:platform": "pnpm --filter dify-chat-platform start",
-		"prepare": "husky"
+		"build": "pnpm -r build",
+		"dev": "./dev-start.sh",
+		"dev:react": "pnpm --filter dify-chat-app-react dev",
+		"dev:platform": "pnpm --filter @dify-chat/platform dev",
+		"test": "pnpm -r test",
+		"lint": "pnpm -r lint",
+		"format": "pnpm -r format",
+		"changeset": "changeset",
+		"version-packages": "changeset version",
+		"release": "pnpm build && changeset publish",
+		"docker:build": "./docker-deploy.sh build",
+		"docker:start": "./docker-deploy.sh start",
+		"docker:stop": "./docker-deploy.sh stop",
+		"docker:restart": "./docker-deploy.sh restart",
+		"docker:logs": "./docker-deploy.sh logs",
+		"docker:cleanup": "./docker-deploy.sh cleanup",
+		"docker:deploy": "./docker-deploy.sh deploy"
 	},
 	"devDependencies": {
 		"@changesets/cli": "catalog:",
