--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -41,6 +41,7 @@
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
+		"react-infinite-scroll-component": "^6.1.0",
 		"react-markdown": "catalog:",
 		"react-photo-view": "catalog:",
 		"react-syntax-highlighter": "catalog:",
