--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"version": "0.4.0",
 	"scripts": {
 		"build": "pnpm -r build",
+		"build:pkgs": "pnpm --filter @dify-chat/* build",
 		"dev": "./dev-start.sh",
 		"dev:react": "pnpm --filter dify-chat-app-react dev",
 		"dev:platform": "pnpm --filter @dify-chat/platform dev",
