feat(docs): 支持多版本文档
- 将历史文档归档至 v0.4.0 目录下，并新增 Latest 文档目录用于存放当前版本文档
- package.json 新增 dev:docs 命令，用于快速启动文档子包

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"build": "pnpm -r build",
 		"build:pkgs": "pnpm --filter @dify-chat/* build",
 		"dev": "./dev-start.sh",
+		"dev:docs": "pnpm --filter dify-chat-docs dev",
 		"dev:react": "pnpm --filter dify-chat-app-react dev",
 		"dev:platform": "pnpm --filter @dify-chat/platform dev",
 		"test": "pnpm -r test",
