feat(auth): 实现基于NextAuth的用户认证系统
添加完整的用户认证功能，包括登录页面、会话管理、用户CRUD接口和用户管理界面
- 使用NextAuth.js实现基于凭证的认证流程
- 添加用户管理页面和API接口
- 实现会话保护和路由守卫
- 添加默认管理员账户初始化脚本
- 更新README文档说明新功能

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -13,12 +13,14 @@
 		"db:studio": "prisma studio",
 		"db:seed": "tsx prisma/seed.ts",
 		"db:init": "tsx scripts/init-db.ts",
+		"create-admin": "tsx scripts/create-admin.ts",
 		"postinstall": "prisma generate"
 	},
 	"dependencies": {
 		"@ant-design/icons": "catalog:",
 		"@ant-design/nextjs-registry": "catalog:",
 		"@ant-design/v5-patch-for-react-19": "catalog:",
+		"@auth/prisma-adapter": "^2.10.0",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
@@ -29,12 +31,14 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
+		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"classnames": "catalog:",
 		"clsx": "^2.1.1",
 		"dayjs": "catalog:",
 		"lucide-react": "catalog:",
 		"next": "catalog:",
+		"next-auth": "^4.24.11",
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
@@ -44,6 +48,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "catalog:",
 		"@tailwindcss/postcss": "^4",
+		"@types/bcryptjs": "^3.0.0",
 		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
