feat(platform/db): 添加数据库动态切换功能，默认 sqlite，支持切换到 postgresql
- 添加数据库切换脚本和模板文件，支持在 SQLite 和 PostgreSQL 之间切换
- 更新 package.json 添加相关命令
- 添加数据库切换文档说明

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -13,6 +13,9 @@
 		"db:studio": "prisma studio",
 		"db:seed": "tsx prisma/seed.ts",
 		"db:init": "tsx scripts/init-db.ts",
+		"db:switch": "npx tsx scripts/switch-db.ts",
+		"db:switch:sqlite": "npx tsx scripts/switch-db.ts sqlite",
+		"db:switch:postgresql": "npx tsx scripts/switch-db.ts postgresql",
 		"create-admin": "tsx scripts/create-admin.ts",
 		"postinstall": "prisma generate"
 	},
