--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -23,44 +23,44 @@
 		"@ant-design/icons": "catalog:",
 		"@ant-design/nextjs-registry": "catalog:",
 		"@ant-design/v5-patch-for-react-19": "catalog:",
-		"@auth/prisma-adapter": "^2.10.0",
+		"@auth/prisma-adapter": "catalog:",
 		"@dify-chat/api": "workspace:^",
 		"@dify-chat/components": "workspace:^",
 		"@dify-chat/core": "workspace:^",
 		"@dify-chat/helpers": "workspace:^",
 		"@dify-chat/theme": "workspace:^",
-		"@prisma/client": "^6.1.0",
-		"@radix-ui/react-dialog": "^1.1.14",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@prisma/client": "catalog:",
+		"@radix-ui/react-dialog": "catalog:",
+		"@radix-ui/react-slot": "catalog:",
 		"ahooks": "catalog:",
 		"antd": "catalog:",
-		"bcryptjs": "^3.0.2",
-		"class-variance-authority": "^0.7.1",
+		"bcryptjs": "catalog:",
+		"class-variance-authority": "catalog:",
 		"classnames": "catalog:",
-		"clsx": "^2.1.1",
+		"clsx": "catalog:",
 		"dayjs": "catalog:",
 		"lucide-react": "catalog:",
 		"next": "catalog:",
-		"next-auth": "^4.24.11",
+		"next-auth": "catalog:",
 		"pure-react-router": "catalog:",
 		"react": "catalog:",
 		"react-dom": "catalog:",
 		"tailwind-merge": "catalog:",
-		"vaul": "^1.1.2"
+		"vaul": "catalog:"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "catalog:",
-		"@tailwindcss/postcss": "^4",
-		"@types/bcryptjs": "^3.0.0",
+		"@tailwindcss/postcss": "catalog:",
+		"@types/bcryptjs": "catalog:",
 		"@types/node": "catalog:",
 		"@types/react": "catalog:",
 		"@types/react-dom": "catalog:",
 		"eslint": "catalog:",
 		"eslint-config-next": "catalog:",
-		"prisma": "^6.1.0",
+		"prisma": "catalog:",
 		"tailwindcss": "^4",
-		"tsx": "^4.19.2",
-		"tw-animate-css": "^1.3.5",
+		"tsx": "catalog:",
+		"tw-animate-css": "catalog:",
 		"typescript": "catalog:"
 	}
 }
