--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -16,11 +16,15 @@ onlyBuiltDependencies:
   - unrs-resolver
 
 catalog:
+  'class-variance-authority': ^0.7.1
+  'next-auth': ^4.24.11
+  'tw-animate-css': ^1.3.5
   '@ant-design/cssinjs': ^1.23.0
   '@ant-design/icons': ^5.6.1
   '@ant-design/nextjs-registry': ^1.0.2
   '@ant-design/v5-patch-for-react-19': ^1.0.3
   '@ant-design/x': ^1.4.0
+  '@auth/prisma-adapter': ^2.10.0
   '@biomejs/biome': ^1.9.4
   '@changesets/cli': ^2.29.5
   '@eslint/compat': ^1.3.0
@@ -28,6 +32,9 @@ catalog:
   '@eslint/js': ^9.24.0
   '@fingerprintjs/fingerprintjs': ^4.6.2
   '@heroicons/react': ^2.2.0
+  '@prisma/client': ^6.1.0
+  '@radix-ui/react-dialog': ^1.1.14
+  '@radix-ui/react-slot': ^1.2.3
   '@rsbuild/core': ^1.3.22
   '@rsbuild/plugin-less': ^1.2.2
   '@rsbuild/plugin-react': ^1.2.0
@@ -41,11 +48,13 @@ catalog:
   '@storybook/react': ^8.6.12
   '@storybook/test': ^8.6.12
   '@svgdotjs/svg.js': ^3.2.4
+  '@tailwindcss/postcss': ^4
   '@testing-library/jest-dom': ^6.6.3
   '@testing-library/react': ^16.3.0
   '@toolkit-fe/clipboard': ^0.1.22
   '@toolkit-fe/where-am-i': ^0.1.22
   '@trivago/prettier-plugin-sort-imports': ^5.2.2
+  '@types/bcryptjs': ^3.0.0
   '@types/hast': ^3.0.4
   '@types/lodash-es': ^4.17.12
   '@types/node': ^22.14.1
@@ -57,7 +66,9 @@ catalog:
   ahooks: ^3.8.4
   antd: ^5.24.7
   antd-style: ^3.7.1
+  bcryptjs: ^3.0.2
   classnames: ^2.5.1
+  clsx: ^2.1.1
   dayjs: ^1.11.13
   dompurify: ^3.2.5
   echarts-for-react: ^3.0.2
@@ -84,6 +95,7 @@ catalog:
   pako: ^2.1.0
   prettier: ^3.5.3
   prettier-plugin-tailwindcss: ^0.6.11
+  prisma: ^6.1.0
   pure-react-router: ^0.2.4
   react: ^19.1.0
   react-dom: ^19.1.0
@@ -105,5 +117,6 @@ catalog:
   tsx: ^4.20.3
   typescript: ^5.8.3
   typescript-eslint: ^8.30.1
+  vaul: ^1.1.2
   vitest: ^3.2.3
   zustand: ^5.0.6
