ci(github/workflows): 添加调试模式环境变量并更新构建命令
- 在部署工作流中添加 PUBLIC_DEBUG_MODE 环境变量以构建调试模式应用

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -36,9 +36,13 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: pnpm install
+      # 添加 .env 的调试模式环境变量
+      - name: Add .env
+        run: |
+          echo "PUBLIC_DEBUG_MODE=true" >> packages/react-app/.env
       - name: Build with Rsbuild and Rslib
         run: |
-          pnpm run build
+          pnpm build
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
