feat(platform): 添加交互式管理员账户创建功能
- 修改 create-admin 脚本支持交互式输入管理员信息
- 在 prod-start.sh 和 package.json 中添加相关命令提示

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"dev:docs": "pnpm --filter dify-chat-docs dev",
 		"dev:react": "pnpm --filter dify-chat-app-react dev",
 		"dev:platform": "pnpm --filter @dify-chat/platform dev",
+		"create-admin": "pnpm --filter dify-chat-platform create-admin",
 		"test": "pnpm -r test",
 		"lint": "pnpm -r lint",
 		"format": "pnpm -r format",
