ci(github): add provenance downgrade check by `danielroe/provenance-action``

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -32,6 +32,8 @@ jobs:
         with:
           node-version: 22.5.1
           cache: pnpm
+      - name: Provenance downgrade check
+        uses: danielroe/provenance-action@0.1.0
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Install dependencies
