chore(react-app): 调整 nginx 配置以适配 docker 部署后访问静态资源 404 的问题

--- a/packages/react-app/docker/nginx.conf
+++ b/packages/react-app/docker/nginx.conf
@@ -24,8 +24,7 @@ server {
         application/json;
 
     # 静态文件缓存策略 - 优先匹配
-    location ~* ^/dify-chat/static/.*\.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        rewrite ^/dify-chat/(.*)$ /$1 break;
+    location /dify-chat/static/ {
         root /usr/share/nginx/html;
         expires 1y;
         add_header Cache-Control "public, immutable";
