chore(docker): 更新react-app 的 docker 配置
- 将Dockerfile重命名为Dockerfile_react_app 并调整构建目标为runtime 阶段
- 更新容器名以保持命名一致性

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,12 @@ services:
   react-app:
     build:
       context: .
-      dockerfile: Dockerfile
-      target: react-app
+      dockerfile: Dockerfile_react_app
+      # 指定镜像中的 stage
+      target: runtime
     ports:
       - '5200:80'
-    container_name: dify-chat-react-app
+    container_name: dify-chat-app-react
     restart: unless-stopped
     networks:
       - dify-chat-network
