chore(deps): 将 eslint-plugin-react-hooks 从 5.2.0 升级至 6.1.0
- 将 eslint-plugin-react-hooks 从 5.2.0 升级至 6.1.0
- 单独增加 zod 依赖，修复 eslint-plugin-react-hooks => zod-validation-error => zod 的依赖链和 platform 子包的 zod 版本冲突导致 lint-staged 的 eslint 运行失败的问题

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"lint-staged": "catalog:",
 		"prettier": "catalog:",
 		"prettier-plugin-tailwindcss": "catalog:",
+		"zod": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	},
