--- a/packages/react-app/package.json
+++ b/packages/react-app/package.json
@@ -77,6 +77,7 @@
 		"prettier": "catalog:",
 		"prettier-plugin-tailwindcss": "catalog:",
 		"tailwindcss": "catalog:",
+		"zod": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	}
