--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -75,7 +75,7 @@ catalog:
   eslint: ^9.26.0
   eslint-config-next: ^15.3.2
   eslint-plugin-react: ^7.37.5
-  eslint-plugin-react-hooks: ^5.2.0
+  eslint-plugin-react-hooks: ^6.1.0
   globals: ^16.0.0
   hast: ^1.0.0
   husky: ^9.1.7
@@ -118,3 +118,4 @@ catalog:
   vaul: ^1.1.2
   vitest: ^3.2.3
   zustand: ^5.0.6
+  zod: ^3.25.0
