--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -98,6 +98,7 @@ catalog:
   pure-react-router: ^0.2.4
   react: ^19.2.0
   react-dom: ^19.2.0
+  react-infinite-scroll-component: ^6.1.0
   react-markdown: ^10.1.0
   react-photo-view: ^1.2.7
   react-syntax-highlighter: ^15.6.1
