chore: update all-contributors' config and add badge in README

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -1,4 +1,15 @@
 {
   "projectName": "dify-chat",
-  "projectOwner": "lexmin0412"
+  "projectOwner": "lexmin0412",
+  "repoType": "github",
+  "repoHost": "https://github.com",
+  "files": [
+    "README.md"
+  ],
+  "imageSize": 100,
+  "commit": true,
+  "commitConvention": "angular",
+  "contributors": [],
+  "contributorsPerLine": 7,
+  "linkToUsage": true
 }
