--- a/docker_community_solutions/Dockerfile_allinone
+++ b/docker_community_solutions/Dockerfile_allinone
@@ -5,7 +5,7 @@ FROM node:latest
 WORKDIR /app
 
 # Copy the rest of the application code to the working directory
-COPY . .
+COPY .. .
 
 # Install pnpm globally and install project dependencies
 RUN npm install -g pnpm pm2
@@ -37,8 +37,8 @@ RUN apt-get update && \
 RUN pnpm build:pkgs
 
 # Copy example environment files to the appropriate locations
-RUN cp ./example/env-frontend.example ./packages/react-app/.env && \
-    cp ./example/env-backend.example ./packages/platform/.env
+RUN cp ./docker_community_solutions/env-frontend.example ./packages/react-app/.env && \
+    cp ./docker_community_solutions/env-backend.example ./packages/platform/.env
 
 # Build the React app
 RUN cd packages/react-app && \
@@ -55,7 +55,7 @@ RUN cd packages/platform && \
 RUN mkdir -p /app/html/dify-chat && \
     cp -r ./packages/react-app/dist/* /app/html/dify-chat/ && \
     rm -rf /etc/nginx/nginx.conf && \
-    cp -r ./example/nginx.conf.example /etc/nginx/nginx.conf
+    cp -r ./docker_community_solutions/nginx.conf.example /etc/nginx/nginx.conf
 
 # create PM2 settings file if not exists
 RUN mkdir -p logs && \
