--- a/docker_community_solutions/Dockerfile_allinone
+++ b/docker_community_solutions/Dockerfile_allinone
@@ -5,7 +5,7 @@ FROM node:latest
 WORKDIR /app
 
 # Copy the rest of the application code to the working directory
-COPY .. .
+COPY . .
 
 # Install pnpm globally and install project dependencies
 RUN npm install -g pnpm pm2
