--- a/.dockerignore
+++ b/.dockerignore
@@ -17,6 +17,8 @@ pnpm-debug.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env.react_app
+.env.platform
 
 # 测试和覆盖率
 .nyc_output
@@ -65,3 +67,123 @@ example
 tsconfig.json
 biome.json
 vitest.config.ts
+
+# React App 专用 .dockerignore 文件
+# 使用方法：docker build -f Dockerfile_react_app -t dify-chat-app-react:latest .
+
+# ================================
+# 开发和构建产物
+# ================================
+**/dist
+**/build
+**/.next
+**/coverage
+**/.nyc_output
+
+# ================================
+# 版本控制
+# ================================
+.git
+.gitignore
+**/.gitkeep
+
+# ================================
+# 环境和配置文件
+# ================================
+.env*
+!.env.example
+**/.env*
+!**/.env.example
+
+# ================================
+# 开发工具配置
+# ================================
+.vscode
+.idea
+**/.vscode
+**/.idea
+.DS_Store
+**/.DS_Store
+Thumbs.db
+**/Thumbs.db
+
+# ================================
+# 测试文件
+# ================================
+**/__tests__
+**/*.test.*
+**/*.spec.*
+**/test
+**/tests
+jest.config.*
+**/.jest
+
+# ================================
+# 文档和示例
+# ================================
+README.md
+**/README.md
+CHANGELOG.md
+**/CHANGELOG.md
+LICENSE
+**/LICENSE
+docs/
+**/docs/
+examples/
+**/examples/
+
+# ================================
+# 开发脚本和配置
+# ================================
+.eslintrc*
+.prettierrc*
+.editorconfig
+**/.eslintrc*
+**/.prettierrc*
+**/.editorconfig
+dev-start.sh
+scripts/
+**/scripts/
+
+# ================================
+# 不需要的包目录（保留必要的）
+# ================================
+
+packages/docs/
+
+# ================================
+# 临时文件和日志
+# ================================
+*.log
+**/*.log
+*.tmp
+**/*.tmp
+.cache
+**/.cache
+.temp
+**/.temp
+
+# ================================
+# Docker 相关
+# ================================
+Dockerfile*
+docker-compose*
+.dockerignore*
+
+# ================================
+# CI/CD 配置
+# ================================
+.github/
+.gitlab-ci.yml
+.travis.yml
+.circleci/
+
+# ================================
+# 包管理器缓存
+# ================================
+.pnpm-store/
+.yarn/
+.npm/
+**/.pnpm-store/
+**/.yarn/
+**/.npm/
