--- a/Dockerfile_react_app
+++ b/Dockerfile_react_app
@@ -64,6 +64,8 @@ FROM nginx:latest AS runtime
 
 # 复制自定义 nginx 配置
 COPY packages/react-app/docker/nginx.conf /etc/nginx/conf.d/default.conf
+COPY packages/react-app/docker/replace_env.sh /docker-entrypoint.sh
+RUN chmod +x /docker-entrypoint.sh
 
 # 复制构建产物到 nginx 静态文件目录（优化权限）
 COPY --from=builder /app/packages/react-app/dist /usr/share/nginx/html/dify-chat
@@ -72,7 +74,7 @@ COPY --from=builder /app/packages/react-app/dist /usr/share/nginx/html/dify-chat
 EXPOSE 80
 
 # 启动 nginx
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["/docker-entrypoint.sh", "nginx", "-g", "daemon off;"]
 
 # ================================
 # 构建说明和使用指南
