--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,52 @@
+# Dify Chat 独立部署配置
+# 此文件可以独立使用，无需 clone 源码仓库
+# 使用 DockerHub 上的预构建镜像
+
+# 使用说明：
+# 2. 配置 DATABASE_URL 为实际的数据库连接地址
+# 3. 配置 NEXTAUTH_SECRET 为安全的密钥
+# 5. 可选：设置端口环境变量（如不设置将使用默认值）：
+#    export DC_REACT_APP_PORT=5200
+#    export DC_PLATFORM_PORT=5300
+# 6. 运行命令：docker-compose up -d
+# 7. 访问应用：http://localhost:${DC_REACT_APP_PORT:-5200}
+#
+# 注意事项：
+# - 确保数据库服务已启动并可访问
+# - 生产环境中请使用强密码和安全的密钥
+
+version: '3.8'
+
 services:
-  # React App 前端应用
   react-app:
-    build:
-      context: .
-      dockerfile: Dockerfile_react_app
-      # 指定镜像中的 stage
-      target: runtime
-    ports:
-      - '5200:80'
+    image: lexmin0412/dify-chat-app-react:latest
     container_name: dify-chat-app-react
-    restart: unless-stopped
-    networks:
-      - dify-chat-network
-
-  # Platform 平台应用
-  platform:
-    image: dify-chat-platform:latest
     ports:
-      - '5300:5300'
-    container_name: dify-chat-platform
-    restart: unless-stopped
+      - '${DC_REACT_APP_PORT:-5200}:80'
+    # 直接声明环境变量，更稳定可靠
     environment:
-      - NODE_ENV=production
-      - PORT=5300
+      - PUBLIC_APP_API_BASE=http://localhost:-5300/api/client
+      - PUBLIC_DIFY_PROXY_API_BASE=http://localhost:-5300/api/client/dify
+      - PUBLIC_DEBUG_MODE=false
+    depends_on:
+      - platform
+    restart: unless-stopped
     networks:
       - dify-chat-network
 
-# 网络配置
+  platform:
+    image: lexmin0412/dify-chat-platform:latest
+    container_name: dify-chat-platform
+    ports:
+      - '${DC_PLATFORM_PORT:-5300}:3000'
+    # 启动时替换
+    environment:
+      - DATABASE_URL=postgresql://username:password@host:port/database_name
+      - NEXTAUTH_SECRET=your-secret-key-here
+    restart: unless-stopped
+    networks:
+      - dify-chat-network
+
 networks:
   dify-chat-network:
     driver: bridge
-# 可选：数据卷配置（如果需要持久化数据）
-# volumes:
-#   app-data:
-#     driver: local
