--- a/.env.platform.template
+++ b/.env.platform.template
@@ -1,13 +1,10 @@
 # Platform 服务环境变量配置模板
 # 复制此文件为 .env.platform 并根据实际环境修改配置
 
-# 服务端口
-PORT=5300
-
 # 数据库配置 - 必填项
-# PostgreSQL 示例: postgresql://username:password@host:port/database_name
-# MySQL 示例: mysql://username:password@host:port/database_name
-DATABASE_URL=postgresql://username:password@host:port/database_name
+# PostgreSQL 示例:
+# DATABASE_URL=postgresql://username:password@host:port/database_name
+DATABASE_URL=mysql://username:password@host:port/database_name
 
 # NextAuth 的密钥
 NEXTAUTH_SECRET=xxx
