build(Dockerfile): 分离入口脚本和 nginx 启动命令
将 ENTRYPOINT 和 CMD 指令分离，使入口脚本和 nginx 启动命令更清晰

--- a/Dockerfile_react_app
+++ b/Dockerfile_react_app
@@ -73,8 +73,11 @@ COPY --from=builder /app/packages/react-app/dist /usr/share/nginx/html/dify-chat
 # 暴露端口
 EXPOSE 80
 
+# 入口脚本
+ENTRYPOINT ["/docker-entrypoint.sh"]
+
 # 启动 nginx
-CMD ["/docker-entrypoint.sh", "nginx", "-g", "daemon off;"]
+CMD ["nginx", "-g", "daemon off;"]
 
 # ================================
 # 构建说明和使用指南
