chore: 更新gitignore规则并统一环境变量模板文件
- 简化根目录.gitignore中的.env规则
- 移除platform子包中冗余的.env*规则
- 添加统一的.env.template文件替代原有的.env.platform.template
- 为react-app添加环境变量模板文件

--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,8 @@ dist/
 .next
 
 # 环境变量文件 - 包含敏感信息，不应提交到版本控制
-.env
-.env.*
-!.env.*.template
+.env*
+!.env.template
 
 packages/server/apps.json
 .dify-chat
