chore(react-app): 将环境配置模板文件中的调试模式默认值改为关闭

--- a/packages/react-app/.env.template
+++ b/packages/react-app/.env.template
@@ -6,4 +6,4 @@ PUBLIC_APP_API_BASE=http://localhost:5300/api/client
 # Dify 代理 API 基础路径
 PUBLIC_DIFY_PROXY_API_BASE=http://localhost:5300/api/client/dify
 # 调试模式开关 true-开启 false-关闭
-PUBLIC_DEBUG_MODE=true
+PUBLIC_DEBUG_MODE=false
