--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,73 +8,34 @@ services:
     build:
       context: .
       dockerfile: Dockerfile_react_app
+    container_name: dify-chat-app-react-self-deploy
     ports:
       - '5200:80'
-    container_name: dify-chat-app-react
-    restart: unless-stopped
+    # 通过文件读取环境变量
     env_file:
-      - .env.react_app
-    networks:
-      - dify-chat-network
+      - packages/react-app/.env
     depends_on:
       - platform
-    # 开发环境可以挂载源码目录实现热重载
-    # volumes:
-    #   - ./packages/react-app/src:/app/src
+    restart: unless-stopped
+    networks:
+      - dify-chat-network
 
   # Platform 平台应用
   platform:
     build:
       context: .
       dockerfile: Dockerfile_platform
+    container_name: dify-chat-platform-self-deploy
     ports:
       - '5300:5300'
-    container_name: dify-chat-platform
-    restart: unless-stopped
+    # 通过文件读取环境变量
     env_file:
-      - .env.platform
+      - packages/platform/.env
+    restart: unless-stopped
     networks:
       - dify-chat-network
-    # 开发环境可以挂载源码目录实现热重载
-    # volumes:
-    #   - ./packages/platform:/app
 
 # 网络配置
 networks:
   dify-chat-network:
     driver: bridge
-# 可选：数据卷配置（如果需要持久化数据）
-# volumes:
-#   app-data:
-#     driver: local
-
-# ================================
-# 使用说明
-# ================================
-#
-# 适用场景：
-# - 本地开发环境
-# - 需要修改源码并实时构建
-# - 首次部署或需要自定义镜像
-#
-# 前置条件：
-# 1. 复制环境变量模板文件:
-#    cp .env.react_app.template .env.react_app
-#    cp .env.platform.template .env.platform
-#
-# 2. 编辑环境变量文件:
-#    nano .env.react_app
-#    nano .env.platform
-#
-# 构建并启动服务:
-#    docker-compose up --build
-#
-# 后台运行:
-#    docker-compose up --build -d
-#
-# 访问应用:
-#    - React App: http://localhost:5200
-#    - Platform API: http://localhost:5300
-#
-# 停止服务:
-#    docker-compose down
