chore(scripts): 移除 dev-start.sh 和 dev 命令，修正 dev:platform 命令
- 移除旧的 dev-start.sh 脚本，开发环境不再需要
- 更新 dev:platform 命令以使用新的包名称

--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
 	"scripts": {
 		"build": "pnpm -r build",
 		"build:pkgs": "pnpm --filter @dify-chat/* build",
-		"dev": "./dev-start.sh",
 		"dev:docs": "pnpm --filter dify-chat-docs dev",
 		"dev:react": "pnpm --filter dify-chat-app-react dev",
-		"dev:platform": "pnpm --filter @dify-chat/platform dev",
+		"dev:platform": "pnpm --filter dify-chat-platform dev",
 		"create-admin": "pnpm --filter dify-chat-platform create-admin",
 		"test": "pnpm -r test",
 		"lint": "pnpm -r lint",
