chore(platform): dev 脚本指定端口为 5300，与项目默认配置保持一致

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -3,7 +3,7 @@
 	"version": "0.5.5",
 	"private": true,
 	"scripts": {
-		"dev": "next dev --turbopack",
+		"dev": "PORT=5300 next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
