ci(github/workflow): 在部署流程中构建完成之后替换 PUBLIC_DEBUG_MODE 为 true 以固定为调试模式

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Build with Rsbuild and Rslib
         run: |
           pnpm build
+      - name: Replace PUBLIC_DEBUG_MODE in env.js
+        run: |
+          sed -i "s|PUBLIC_DEBUG_MODE: '{{__PUBLIC_DEBUG_MODE__}}',|PUBLIC_DEBUG_MODE: 'true',|" packages/react-app/dist/env.js
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
