ci(github): 优化部署流程
- 移除无用的添加调试模式环境变量的步骤（.env 只有在开发环境才生效）
- 明确构建的子包，使用--filter参数指定构建目标

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -38,13 +38,12 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: pnpm install
-      # 添加 .env 的调试模式环境变量
-      - name: Add .env
+      - name: Build SubPackages
         run: |
-          echo "PUBLIC_DEBUG_MODE=true" >> packages/react-app/.env
+          pnpm --filter @dify-chat/* build
       - name: Build with Rsbuild and Rslib
         run: |
-          pnpm build
+          pnpm --filter dify-chat-app-react build
       - name: Replace PUBLIC_DEBUG_MODE in env.js
         run: |
           sed -i "s|PUBLIC_DEBUG_MODE: '{{__PUBLIC_DEBUG_MODE__}}',|PUBLIC_DEBUG_MODE: 'true',|" packages/react-app/dist/env.js
