chore(platform): 调整 Dockerfile 中 prisma 文件复制路径并在启动时添加 migrate deploy 命令以确保表结构同步
- 调整 prisma 文件复制路径从只复制 generated 目录改为复制整个 prisma 目录
- 在启动命令中添加 prisma 迁移部署步骤

--- a/Dockerfile_platform
+++ b/Dockerfile_platform
@@ -42,11 +42,13 @@ COPY --from=builder /app/packages/platform/.next/standalone ./
 COPY --from=builder /app/packages/platform/.next/static ./packages/platform/.next/static
 COPY --from=builder /app/packages/platform/public ./packages/platform/public
 # 复制 Prisma 生成的客户端文件（必需）
-COPY --from=builder /app/packages/platform/prisma/generated ./packages/platform/prisma/generated
+COPY --from=builder /app/packages/platform/prisma ./packages/platform/prisma
 
 ENV NODE_ENV=production
 ENV PORT=5300
 
 EXPOSE 5300
 
-CMD ["node", "packages/platform/server.js"]
+WORKDIR /app/packages/platform
+
+CMD ["sh", "-c", "npx prisma@6.1.0 migrate deploy && node server.js"]
