chore(platform): 移除 dev 脚本中的 turbopack 参数
- next v16 已默认启用 turbopack，无需手动指定

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -3,7 +3,7 @@
 	"version": "0.6.2",
 	"private": true,
 	"scripts": {
-		"dev": "PORT=5300 next dev --turbopack",
+		"dev": "PORT=5300 next dev",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
