chore(deps): 升级 antd 到 v6.0.0, 移除 antd 5.x 的 react 19 补丁依赖及相关引入代码, 使用新的写法替代 deprecated API

--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -45,6 +45,7 @@
 		"lucide-react": "catalog:",
 		"prettier": "catalog:",
 		"react": "catalog:",
+		"react-dom": "catalog:",
 		"typescript": "catalog:",
 		"typescript-eslint": "catalog:"
 	},
