feat: add Windows dev script for platform

--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -4,6 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "PORT=5300 next dev",
+		"dev:win": "next dev --port 5300",
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
