--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"dev:docs": "pnpm --filter dify-chat-docs dev",
 		"dev:react": "pnpm --filter dify-chat-app-react dev",
 		"dev:platform": "pnpm --filter dify-chat-platform dev",
+		"dev:platform:win": "pnpm --filter dify-chat-platform dev:win",
 		"create-admin": "pnpm --filter dify-chat-platform create-admin",
 		"test": "pnpm -r test",
 		"lint": "pnpm -r lint",
